--- a/index.html
+++ b/index.html
@@ -286,8 +286,7 @@
                   <h4 class="h4 service-item-title">Data Entry</h4>
 
                   <p class="service-item-text">
-                    I make high-quality photos of any category at a professional
-                    level of accuracy and efficiency.
+                    Iam professionlay And accurate Data Entry Oprater
                   </p>
                 </div>
               </li>
