--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="info-content">
             <h1 class="name" title="Richard hanrick">Mohit tripathi</h1>
 
-            <p class="title">Web developer & designer</p>
+            <p class="title">Web Developer & Designer</p>
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
@@ -116,7 +116,7 @@
               <div class="contact-info">
                 <p class="contact-title">Location</p>
 
-                <address>Prayagraj India</address>
+                <address>Bengaluru India</address>
               </div>
             </li>
           </ul>
@@ -125,8 +125,8 @@
 
           <ul class="social-list">
             <li class="social-item">
-              <a href="https://www.facebook.com/share/1893enuVrB/ " class="social-link">
-                <ion-icon name="logo-facebook"></ion-icon>
+              <a href="www.linkedin.com/in/mohit-tripathi-233017252 " class="social-link">
+                <ion-icon name="logo-linkedin"></ion-icon>
               </a>
             </li>
 
@@ -137,8 +137,8 @@
             </li>
 
             <li class="social-item">
-              <a href="https://www.instagram.com/" class="social-link">
-                <ion-icon name="logo-instagram"></ion-icon>
+              <a href="https://github.com/mohit-546" class="social-link">
+                <ion-icon name="logo-github"></ion-icon>
               </a>
             </li>
           </ul>
@@ -161,7 +161,7 @@
             </li>
 
             <li class="navbar-item">
-              <button class="navbar-link" data-nav-link>Resume</button>
+              <button class="navbar-link" data-nav-link>Education</button>
             </li>
 
             <li class="navbar-item">
@@ -189,23 +189,10 @@
 
           <section class="about-text">
             <p>
-              I'm a creative and adaptable Frontend Web Developer & Designer
-              with experience in building responsive, user-friendly websites
-              using HTML, CSS, and JavaScript. I also have skills in Data Entry,
-              Thumbnail Design, and strong Multitasking abilities, making me a
-              versatile asset to any project. I enjoy learning new things and
-              turning ideas into impactful digital experiences. 
+            I'm a passionate Frontend Web Developer and Designer skilled in crafting responsive, user-centric websites with HTML, HTML5, BOOTSTRAP, TAILWIND, CSS, and JavaScript. I also excel in thumbnail design and data entry, bringing versatility and precision to every project. My ability to multitask and adapt, paired with a drive to transform ideas into engaging digital solutions, makes me a valuable addition to any team. Eager to learn and grow, I’m ready to deliver impactful results for your next project 
             </p>
 
-            <p>
-              I am a highly
-              motivated and detail-oriented individual with a passion for web
-              development and design. I thrive in fast-paced environments and
-              enjoy collaborating with teams to bring ideas to life. My goal is
-              to create exceptional digital experiences that leave a lasting
-              impact on users. Let's connect and explore how we can work
-              together to achieve your vision!
-            </p>
+        
           </section>
 
           <!--
@@ -264,7 +251,7 @@
                 </div>
 
                 <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Thumbnil Design</h4>
+                  <h4 class="h4 service-item-title">Thumbnail Design</h4>
 
                   <p class="service-item-text">
                     Creating visually appealing and engaging thumbnails for
@@ -490,55 +477,66 @@
             </ol>
           </section>
 
-          <section class="skill">
-            <h3 class="h3 skills-title">My skills</h3>
+         <section class="skills">
+  <h3 class="h3 skills-title">My Skills</h3>
 
-            <ul class="skills-list content-card">
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Web Developer</h5>
-                  <data value="80">95%</data>
-                </div>
+  <ul class="skills-list content-card">
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Frontend Development</h5>
+        <span>Advanced</span>
+      </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 90%;" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <p class="skill-details">HTML, CSS, JavaScript, Bootstrap, Tailwind CSS, Responsive Design</p>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 80%"></div>
-                </div>
-              </li>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Thumbnail Design</h5>
+        <span>Proficient</span>
+      </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 85%;" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <p class="skill-details">Creating eye-catching thumbnails for digital content</p>
+    </li>
 
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Designs</h5>
-                  <data value="70">90%</data>
-                </div>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Data Entry</h5>
+        <span>Advanced</span>
+      </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 90%;" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <p class="skill-details">Microsoft Office, Excel, accurate and efficient data management</p>
+    </li>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 70%"></div>
-                </div>
-              </li>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Version Control</h5>
+        <span>Proficient</span>
+      </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 85%;" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <p class="skill-details">Git, GitHub for collaborative development</p>
+    </li>
 
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Data Entery </h5>
-                  <data value="90">90%</data>
-                </div>
-
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 80%"></div>
-                </div>
-              </li>
-
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Office Administrator</h5>
-                  <data value="40">85%</data>
-                </div>
-
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 50%"></div>
-                </div>
-              </li>
-            </ul>
-          </section>
+    <li class="skills-item">
+      <div class="title-wrapper">
+        <h5 class="h5">Database Management</h5>
+        <span>Intermediate</span>
+      </div>
+      <div class="skill-progress-bg">
+        <div class="skill-progress-fill" style="width: 70%;" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+      <p class="skill-details">MySQL for basic database operations</p>
+    </li>
+  </ul>
+</section>
         </article>
 
         <!--
@@ -557,15 +555,15 @@
               </li>
 
               <li class="filter-item">
-                <button data-filter-btn>Web design</button>
+                <button data-filter-btn>Web Design</button>
               </li>
 
               <li class="filter-item">
-                <button data-filter-btn>Applications</button>
+                <button data-filter-btn>Web Applications</button>
               </li>
 
               <li class="filter-item">
-                <button data-filter-btn>Web development</button>
+                <button data-filter-btn>Web Development</button>
               </li>
             </ul>
 
@@ -586,7 +584,7 @@
                 </li>
 
                 <li class="select-item">
-                  <button data-select-item>Web design</button>
+                  <button data-select-item>Web Design</button>
                 </li>
 
                 <li class="select-item">
@@ -594,7 +592,7 @@
                 </li>
 
                 <li class="select-item">
-                  <button data-select-item>Web development</button>
+                  <button data-select-item>Web Development</button>
                 </li>
               </ul>
             </div>
@@ -603,7 +601,7 @@
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="web development"
+                data-category="web Development"
               >
                 <a href="#">
                   <figure class="project-img">
@@ -620,14 +618,14 @@
 
                   <h3 class="project-title">Clinic </h3>
 
-                  <p class="project-category">Web development</p>
+                  <p class="project-category">Web Development</p>
                 </a>
               </li>
 
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="web development"
+                data-category="web Development"
               >
                 <a href="#">
                   <figure class="project-img">
@@ -642,7 +640,7 @@
                     />
                   </figure>
 
-                  <h3 class="project-title">Dashboard ui</h3>
+                  <h3 class="project-title">Dashboard Ui</h3>
 
                   <p class="project-category">Web Design</p>
                 </a>
@@ -651,7 +649,7 @@
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="web design"
+                data-category="web Design"
               >
                 <a href="#">
                   <figure class="project-img">
@@ -666,9 +664,9 @@
                     />
                   </figure>
 
-                  <h3 class="project-title">E commerce Meesho Clone</h3>
+                  <h3 class="project-title">E Commerce Meesho Clone</h3>
 
-                  <p class="project-category">Web design</p>
+                  <p class="project-category">Web Design</p>
                 </a>
               </li>
 
@@ -699,7 +697,7 @@
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="web design"
+                data-category="web Design"
               >
                 <a href="#">
                   <figure class="project-img">
@@ -714,7 +712,7 @@
                     />
                   </figure>
 
-                  <h3 class="project-title">E commerce Flipkart Clone</h3>
+                  <h3 class="project-title">E Commerce Flipkart Clone</h3>
 
                   <p class="project-category">Web Development</p>
                 </a>
@@ -723,7 +721,7 @@
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="web design"
+                data-category="web Design"
               >
                 <a href="#">
                   <figure class="project-img">
@@ -740,14 +738,14 @@
 
                   <h3 class="project-title">Grocerry Store</h3>
 
-                  <p class="project-category">Web design</p>
+                  <p class="project-category">Web Design</p>
                 </a>
               </li>
 
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="web development"
+                data-category="web Development"
               >
                 <a href="#">
                   <figure class="project-img">
@@ -764,14 +762,14 @@
 
                   <h3 class="project-title">Restorent Website</h3>
 
-                  <p class="project-category">Web development</p>
+                  <p class="project-category">Web Development</p>
                 </a>
               </li>
 
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="applications"
+                data-category="Web Applications"
               >
                 <a href="#">
                   <figure class="project-img">
@@ -795,7 +793,7 @@
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="web development"
+                data-category="web Development"
               >
                 <a href="#">
                   <figure class="project-img">
@@ -812,7 +810,7 @@
 
                   <h3 class="project-title">Family Mart Fully Workable</h3>
 
-                  <p class="project-category">Web development</p>
+                  <p class="project-category">Web Development</p>
                 </a>
               </li>
             </ul>
@@ -962,19 +960,10 @@
             <h2 class="h2 article-title">Contact</h2>
           </header>
 
-          <section class="mapbox" data-mapbox>
-            <figure>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7208.575392955348!2d81.84382454620435!3d25.395178684019875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1747212581820!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                width="400"
-                height="300"
-                loading="lazy"
-              ></iframe>
-            </figure>
-          </section>
+         
 
             <section class="contact-form"></section>
-            <h3 class="h3 form-title">Contact Form</h3>
+            <h3 class="h3 form-title">Query Form</h3>
 
             <form
               action="https://api.web3forms.com/submit"
