--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@
         </article>
 
         <!--
-        - #RESUME
+        - #Education
       -->
 
-        <article class="resume" data-page="resume">
+        <article class="Education" data-page="Education">
           <header>
-            <h2 class="h2 article-title">Resume</h2>
+            <h2 class="h2 article-title">Education</h2>
           </header>
 
           <section class="timeline">
