--- a/index.html
+++ b/index.html
@@ -385,158 +385,47 @@
             <h2 class="h2 article-title">Education</h2>
           </header>
 
-          <section class="timeline">
-            <div class="title-wrapper">
-              <div class="icon-box">
-                <ion-icon name="book-outline"></ion-icon>
-              </div>
+         <section class="timeline">
+  <div class="title-wrapper">
+    <div class="icon-box">
+      <ion-icon name="book-outline"></ion-icon>
+    </div>
+    <h3 class="h3">Education</h3>
+  </div>
 
-              <h3 class="h3">Education</h3>
-            </div>
-
-            <ol class="timeline-list">
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">
-                 AICSM <span>
-                  All india computer Sarksharta mission
-                 </span>
-                </h4>
-
-                <span>2021 — 2022</span>
-
-                <p class="timeline-text">
-                Diploma in Computer Application (DCA) is a comprehensive program that provides foundational knowledge in computer applications, including software, hardware, and programming. It equips students with essential skills for various IT-related roles.
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Himlayan Gharwal University Uttrakhand</h4>
-
-                <span>2022 — 2025</span>
-
-                <p class="timeline-text">
-                Bachelor of Computer Application (BCA) is a three-year undergraduate program that focuses on computer science and its applications. It provides students with a strong foundation in programming, database management, and software development, preparing them for careers in the IT industry.
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">
-                  Carrer Tech Academy
-                  <span>
-                    Web development and design
-                </h4>
-
-                <span>2024 — 2025</span>
-
-                <p class="timeline-text">
-                    Mern Full Stack Web Development - A comprehensive approach to building modern web applications using MongoDB, Express.js, React, and Node.js.
-                </p>
-              </li>
-            </ol>
-          </section>
-
-          <section class="timeline">
-            <div class="title-wrapper">
-              <div class="icon-box">
-                <ion-icon name="book-outline"></ion-icon>
-              </div>
-
-              <h3 class="h3">Experience</h3>
-            </div>
-
-            <ol class="timeline-list">
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Web Development & Designer r</h4>
-
-                <span>2024 — Present</span>
-
-                <p class="timeline-text">
-                    Specialized in creating responsive websites and visually appealing thumbnails to enhance user engagement.
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Assi Supervisor (MIS Depart) At Badri Group</h4>
-
-                <span>2024-2024</span>
-
-                <p class="timeline-text">
-                    Assisted in managing and supervising MIS operations, ensuring data accuracy and efficient reporting.
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Accountant & Office Administrator At FPO</h4>
-
-                <span>2023-2024</span>
-
-                <p class="timeline-text">
-                    Responsible for managing financial records, office operations, and data entry tasks efficiently.
-                </p>
-              </li>
-            </ol>
-          </section>
-
-         <section class="skills">
-  <h3 class="h3 skills-title">My Skills</h3>
-
-  <ul class="skills-list content-card">
-    <li class="skills-item">
-      <div class="title-wrapper">
-        <h5 class="h5">Frontend Development</h5>
-        <span>Advanced</span>
-      </div>
-      <div class="skill-progress-bg">
-        <div class="skill-progress-fill" style="width: 90%;" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
-      <p class="skill-details">HTML, CSS, JavaScript, Bootstrap, Tailwind CSS, Responsive Design</p>
+  <ol class="timeline-list">
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">
+        AICSM <span>All India Computer Saksharta Mission</span>
+      </h4>
+      <span>2021 — 2022</span>
+      <p class="timeline-text">
+        Diploma in Computer Application (DCA) is a comprehensive program...
+      </p>
     </li>
 
-    <li class="skills-item">
-      <div class="title-wrapper">
-        <h5 class="h5">Thumbnail Design</h5>
-        <span>Proficient</span>
-      </div>
-      <div class="skill-progress-bg">
-        <div class="skill-progress-fill" style="width: 85%;" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
-      <p class="skill-details">Creating eye-catching thumbnails for digital content</p>
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">
+        Himalayan Garhwal University, Uttarakhand
+      </h4>
+      <span>2022 — 2025</span>
+      <p class="timeline-text">
+        Bachelor of Computer Application (BCA) is a three-year undergraduate...
+      </p>
     </li>
 
-    <li class="skills-item">
-      <div class="title-wrapper">
-        <h5 class="h5">Data Entry</h5>
-        <span>Advanced</span>
-      </div>
-      <div class="skill-progress-bg">
-        <div class="skill-progress-fill" style="width: 90%;" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
-      <p class="skill-details">Microsoft Office, Excel, accurate and efficient data management</p>
+    <li class="timeline-item">
+      <h4 class="h4 timeline-item-title">
+        Career Tech Academy <span>Web Development and Design</span>
+      </h4>
+      <span>2024 — 2025</span>
+      <p class="timeline-text">
+        MERN Full Stack Web Development - A comprehensive approach...
+      </p>
     </li>
-
-    <li class="skills-item">
-      <div class="title-wrapper">
-        <h5 class="h5">Version Control</h5>
-        <span>Proficient</span>
-      </div>
-      <div class="skill-progress-bg">
-        <div class="skill-progress-fill" style="width: 85%;" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
-      <p class="skill-details">Git, GitHub for collaborative development</p>
-    </li>
-
-    <li class="skills-item">
-      <div class="title-wrapper">
-        <h5 class="h5">Database Management</h5>
-        <span>Intermediate</span>
-      </div>
-      <div class="skill-progress-bg">
-        <div class="skill-progress-fill" style="width: 70%;" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
-      <p class="skill-details">MySQL for basic database operations</p>
-    </li>
-  </ul>
+  </ol>
 </section>
+
         </article>
 
         <!--
