--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         - #Education
       -->
 
-        <article class="Education" data-page="Education">
+        <article class="Resume" data-page="Resume">
           <header>
             <h2 class="h2 article-title">Education</h2>
           </header>
